_sass/_main.scss
html, body {
  margin: 0;

  &.no-overflow {
    overflow: hidden;
  }
}

body {
  background: #F1F1F1;
  font-family: 'Roboto', sans-serif;
  color: #696969;
  font-size: 15px;
  -webkit-font-smoothing: antialiased;
}

#controls {
  background: #fff;
  padding: 0 20px;
  box-sizing: border-box;
  z-index: 2000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  transition: 0.3s box-shadow;
  box-shadow: 0px 1px 4px 0px rgba(220,220,220,0.9);

  .no-overflow & {
    box-shadow: none;
  }

  .inner {
    display: flex;

    @media (min-width: $sm) {
      width: 700px;
      margin-left: auto;
      margin-right: auto;
    }
  }

  section {
    width: 50%;
    display: flex;
    font-size: 0;
    height: 70px;
    align-items: center;

    &:first-child {
      justify-content: flex-start;
    }

    &:last-child {
      justify-content: flex-end;
    }
  }

  a {
    display: inline-block;
  }

  span {
    padding: 26px;
    margin-right: -20px;
    cursor: pointer;
  }

  .toggle {
    vertical-align: -26px;
    width: 30px;

    b {
      width: inherit;
      display: block;
      height: 2px;
      background: #221E20;
      transition: 0.3s all;
      -webkit-transition: 0.3s all;

      &:nth-child(2) {
        margin: 6px 0;
      }
    }

    .no-overflow & b {
      &:nth-child(1) {
        transform: rotate(-45deg);
        -webkit-transform: rotate(-45deg);
        margin-bottom: -9px;
      }

      &:nth-child(2) {
        opacity: 0;
      }

      &:nth-child(3) {
        transform: rotate(45deg);
        -webkit-transform: rotate(45deg);
        margin-top: -7px;
      }
    }
  }

  .logo {
    width: 38px;
    height: 31px;
    background: url(../images/logo.svg) center no-repeat;
    background-size: 99% auto;
  }
}

#menu {
  background: #fff;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: fixed;
  text-align: center;
  display: none;
  z-index: 1000;
  justify-content: center;
  align-items: center;
  overflow: hidden;

  aside {
    display: none;
  }

  ul {
    list-style: none;
    padding: 0;
    margin: 0;

    li {
      display: block;
      padding: 10px 0;

      @media (min-width: $sm) {
        padding: 20px 0;
      }
    }
  }

  a {
    font-weight: 500;
    font-size: 20px;
    color: #221E20;
    letter-spacing: 0.82px;
    display: inline-block;
    text-transform: uppercase;
    text-decoration: none;
    border-bottom: 1px solid transparent;

    &.active,
    &:hover {
      border-color: #221E20;
    }
  }
}

#content {
  padding: 80px 25px;

  .title {
    color: #F68484;
    font-size: 26px;
    font-weight: 400;
    border-bottom: 2px solid #F68484;
    margin-right: -25px;
    padding: 13px 0;
    margin-bottom: 40px;

    a {
      font-weight: inherit;
    }

    @media (min-width: $sm) {
      margin-right: auto;
    }
  }

  article {
    max-width: 700px;

    @media (min-width: $sm) {
      margin-left: auto;
      margin-right: auto;
    }
  }

  p {
    line-height: 25px;
  }

  h2 {
    font-size: 20px;
    color: #F68484;
    letter-spacing: 0.35px;
    font-weight: 500;
    margin-top: 40px;
  }

  a {
    color: #F68484;
    text-decoration: none;
    font-weight: 500;
  }

  ul {
    margin: 0;
    padding: 0;
    list-style: none;

    li {
      padding: 4px 0;

      &:before {
        content: '\2014';
        color: #696969;
        margin-right: 10px;
      }
    }
  }

  code {
    border-radius: 4px;
    font-size: 16px;
    background: #e5e5e5;
    display: block;
    color: #2B2B2B;
    font-family: 'Inconsolata', sans-serif;
    letter-spacing: 0.38px;
    padding: 17px;
    margin: 30px 0;
  }

  @media (min-width: $sm) {
    padding: 100px 0;
  }
}

